--- a/static/css/estilos.css
+++ b/static/css/estilos.css
@@ -28,7 +28,7 @@
 .why {
   text-align: center;
   background: var(--gray);
-  padding-top: 5em;
+  padding: 5em 0;
 }
 .why .copy {
   margin-bottom: 4em;
