--- a/src/sass/estilos.scss
+++ b/src/sass/estilos.scss
@@ -6,33 +6,28 @@
 @import "./footer.scss";
 
 :root {
-  // Primary
-  --DarkBlue: hsl(233, 26%, 24%);
-  --LimeGreen: hsl(136, 65%, 51%);
-  --BrightCyan: hsl(192, 70%, 51%);
-
-  // Neutral
+  --darkBlue: hsl(233, 26%, 24%);
+  --limeGreen: hsl(136, 65%, 51%);
+  --rightCyan: hsl(192, 70%, 51%);
   --grayBlue: hsl(233, 8%, 62%);
   --gray: hsl(220, 16%, 96%);
   --lightGray: hsl(0, 0%, 98%);
   --white: hsl(0, 0%, 100%);
-
-  --wrapperSpace: 1.5em;
-
   font-size: 16px;
+  --wrapperSpace: 1.5em;
 }
-
+html {
+  // overflow: hidden;
+}
 body {
-  // border: 10px solid red;
-  font-family: "Public Sans", sans-serif;
-  margin: 0px;
+  font-family: 'Public Sans', sans-serif;
+  margin: 0;
   color: var(--grayBlue);
+  overflow-x: hidden;
 }
-
 .copy {
-  // border: 1px solid red;
-  line-height: 1.7em;
-  font-size: 0.9em;
+  line-height: 1.7;
+  font-size: .9em;
 }
 
 .is-hidden {
@@ -41,25 +36,34 @@ body {
 
 .wrapper {
   padding: 0 var(--wrapperSpace);
+  max-width: calc(1115px + 1.5em);
+  margin: auto;
+  width: 100%;
+  box-sizing: border-box;
 }
 
 @mixin title {
   font-size: 2.5em;
-  color: var(--DarkBlue);
+  color: var(--darkBlue);
   font-weight: 300;
-  line-height: 1.3em;
+  line-height: 1.3;
   margin: 0;
-  margin-bottom: 0.5em;
+  margin-bottom: .5em;
 }
 
 .title {
-  // border: 1px solid red;
   &__h1 {
     @include title;
+    // border: 1px solid blue;
+    // font-size: 2.5em;
+    // color: var(--darkBlue);
+    // font-weight: 300;
+    // line-height: 1.3;
+    // margin: 0;
+    // margin-bottom: .5em;
   }
   &__h2 {
     @include title;
-    // border: 1px solid red;
     font-size: 1.5em;
   }
   &__h3 {
@@ -69,45 +73,40 @@ body {
 }
 
 .button {
-  // border: 1px solid blue;
   border: none;
-  padding: 0.9em 2.2em;
+  padding: .9em 2.2em;
+  font-size: 1em;
   border-radius: 1.5em;
   color: var(--white);
-  font-size: 1em;
-  background-image: linear-gradient(
-    to right,
-    var(--LimeGreen) 0%,
-    var(--BrightCyan) 100%
-  );
+  background-image: linear-gradient(to right,var(--limeGreen) 0%,  var(--rightCyan) 100%);
 }
 
 @mixin icon {
   width: 25px;
   height: 25px;
   display: inline-flex;
-  background-repeat: no-repeat;
+  background-repeat: no-repeat
 }
 
 .icon {
   &__facebook {
     @include icon;
-    background: url("../images/icon-facebook.svg") no-repeat;
+    background-image: url('../images/icon-facebook.svg');
   }
-  &__youtube {
+  &__youtube{
     @include icon;
-    background: url("../images/icon-youtube.svg") no-repeat;
+    background-image: url('../images/icon-youtube.svg');
   }
   &__twitter {
     @include icon;
-    background: url("../images/icon-twitter.svg") no-repeat;
+    background-image: url('../images/icon-twitter.svg');
   }
   &__pinterest {
     @include icon;
-    background: url("../images/icon-pinterest.svg") no-repeat;
+    background-image: url('../images/icon-pinterest.svg');
   }
   &__instagram {
     @include icon;
-    background: url("../images/icon-instagram.svg") no-repeat;
+    background-image: url('../images/icon-instagram.svg');
   }
 }
