--- a/src/sass/footer.scss
+++ b/src/sass/footer.scss
@@ -1,12 +1,10 @@
 .footer {
-  // border: 1px solid red;
-  background: var(--DarkBlue);
+  background: var(--darkBlue);
   color: var(--white);
   padding: 2em 0;
   text-align: center;
-  img {
+  &__logo {
     display: block;
-    // padding-bottom: 2em;
     margin: auto;
     margin-bottom: 2em;
   }
@@ -14,17 +12,52 @@
     display: block;
     color: var(--gray);
     text-decoration: none;
-    margin-bottom: 1.5em;
+    margin-bottom: 2em;
   }
   &__social {
     display: grid;
     grid-template-columns: repeat(5, 25px);
     grid-column-gap: 1em;
     justify-content: center;
-    margin-bottom: 2.5em;
+    margin: 2.5em 0;
   }
   &__copyright {
     color: var(--grayBlue);
     margin-top: 2.5em;
+  }
+  @media screen and (min-width: 1024px) {
+    .wrapper {
+      display: grid;
+      grid-column-gap: 7em;
+      grid-template-columns: 200px 1fr 400px;
+      grid-template-areas: "logo links button"
+      "social links copyright";
+    }
+    &__links {
+      // border: 1px solid red;
+      grid-area: links;
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      justify-items: start;
+    }
+    &__logo {
+      // border: 1px solid green;
+      grid-area: logo;
+      margin: initial;
+    }
+    &__social {
+      // border: 1px solid pink;
+      grid-area: social;
+    }
+    &__button {
+      // border: 1px solid white;
+      grid-area: button;
+      text-align: right;
+    }
+    &__copyright {
+      // border: 1px solid blue;
+      grid-area: copyright;
+      text-align: right;
+    }
   }
 }
