--- a/src/sass/latesArticles.scss
+++ b/src/sass/latesArticles.scss
@@ -1,19 +1,21 @@
-.latesArticles {
-  // border: 1px solid red;
-  padding-top: 0 5em;
+.latestArticles {
+  padding: 5em 0;
   background: var(--lightGray);
   .title__h1 {
     text-align: center;
+    margin-bottom: 1em;
   }
+  // .title__h3 {
+  //   text-align: left;
+  // }
   &__grid {
     display: grid;
     grid-row-gap: 2em;
   }
   &__item {
-    // border: 1px solid blue;
-    border-radius: 0.5em;
+    border-radius: .5em;
     overflow: hidden;
-    background: var(--withe);
+    background: var(--white);
     &-content {
       padding: 1.8em;
     }
@@ -29,6 +31,26 @@
       width: 100%;
       object-fit: cover;
       display: block;
+    }
+  }
+  @media screen and (min-width: 768px){
+    .title__h1 {
+      text-align: left;
+    }
+    &__item {
+      &-content {
+        padding: 1em;
+      }
+    }
+    &__grid {
+      display: grid;
+      grid-column-gap: 30px;
+      grid-template-columns: repeat(2, 1fr);
+    }
+  }
+  @media screen and (min-width: 1024px){
+    &__grid {
+      grid-template-columns: repeat(4, 1fr);
     }
   }
 }
