--- a/src/sass/menu.scss
+++ b/src/sass/menu.scss
@@ -1,5 +1,20 @@
 .menu {
-  border: 1px solid green;
-  width: 40px;
-  background: url("../images/icon-hamburger.svg") no-repeat center;
+  // border: 1px solid red;
+  display: flex;
+  list-style: none;
+  &__button {
+    // border: 1px solid green;
+    width: 40px;
+    background: url("../images/icon-hamburger.svg") no-repeat center;
+  }
+  a {
+    text-decoration: none;
+    color: var(--grayBlue);
+    padding: 0 0.8em;
+  }
+  @media screen and (min-width: 1042px) {
+    &__button {
+      display: none;
+    }
+  }
 }
