--- a/src/sass/why.scss
+++ b/src/sass/why.scss
@@ -7,13 +7,24 @@
     font-size: 1em;
   }
   &__item {
-    // border: 1px solid red;
     .copy {
       margin-bottom: 2em;
-      padding: 2.1em;
+    }
+    img {
+      margin-bottom: 1.5em;
     }
   }
-  img {
-    margin-bottom: 1.5em;
+  @media screen and (min-width: 768px) {
+    text-align: left;
+    &__grid {
+      display: grid;
+      grid-column-gap: 1em;
+      grid-template-columns: repeat(2, 1fr);
+    }
+  }
+  @media screen and (min-width: 1024px) {
+    &__grid {
+      grid-template-columns: repeat(4, 1fr);
+    }
   }
 }
