--- a/static/css/estilos.css
+++ b/static/css/estilos.css
@@ -89,11 +89,14 @@
 }
 
 .menu {
-  display: flex;
+  display: none;
   list-style: none;
+  padding: 0;
+  margin: 0;
 }
 .menu__button {
   width: 40px;
+  height: 40px;
   background: url("../images/icon-hamburger.svg") no-repeat center;
 }
 .menu a {
@@ -101,7 +104,47 @@
   color: var(--grayBlue);
   padding: 0 0.8em;
 }
-@media screen and (min-width: 1042px) {
+.menu__item {
+  display: flex;
+  align-items: center;
+}
+.menu__checkbox {
+  display: none;
+}
+.menu__checkbox:checked ~ .menu__button {
+  background: url("../images/icon-close.svg") no-repeat center;
+}
+.menu__checkbox:checked ~ .menu {
+  display: block;
+  position: absolute;
+  top: 100%;
+  padding: 1em;
+  left: 0;
+  right: 0;
+  height: 100vh;
+  background: linear-gradient(to bottom, var(--darkBlue) 0%, transparent 90%);
+}
+.menu__checkbox:checked ~ .menu .menu__item:first-of-type a {
+  padding-top: 2em;
+  border-radius: 0.5em 0.5em 0 0;
+}
+.menu__checkbox:checked ~ .menu .menu__item:last-of-type a {
+  padding-bottom: 2em;
+  border-radius: 0 0 0.5em 0.5em;
+}
+.menu__checkbox:checked ~ .menu a {
+  background: white;
+  padding: 0.8em 1em;
+  color: var(--darkBlue);
+  font-size: 1.1em;
+  display: block;
+  text-align: center;
+  flex: 1;
+}
+@media screen and (min-width: 1024px) {
+  .menu {
+    display: flex;
+  }
   .menu__button {
     display: none;
   }
